--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -4,7 +4,11 @@
     </head>
 
     <body>
-        <h1>Form</h1>
+        <h1>SPARQLOut.</h1>
+
+        <a href="./feeds">List of registered feeds.</a>
+
+        <h2>Register query.</h2>
 
         <form id="query_form" method="post">
             <label class="grey" for="log">SPARQL Endpoint</label><br />
