--- a/src/templates/form.html
+++ b/src/templates/form.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <h1>SPARQLOut.</h1>
+        <h1>SPARQLOud.</h1>
 
         <a href="./feeds">List of registered feeds.</a>
 
